--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "start": "react-scripts start --watch",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   },
   "devDependencies": {
     "flow-bin": "^0.70.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.4",
     "prettier": "^1.12.1"
   }
 }
